Temporary fix for IE11 horizontal scroll 0 height:
Can't figure out what is wrong, so applying fixed height to parent of scroll, which the scroll should inherit.
As soon as I have a decent way to debug on IE (read: not a surface), I'll give it a go.

--- a/app/assets/stylesheets/editor-3/scroll-view.css.scss
+++ b/app/assets/stylesheets/editor-3/scroll-view.css.scss
@@ -29,6 +29,13 @@
   margin-top: 0;
 }
 
+.ie11-hotfix {
+  & .ScrollView--horizontal {
+    /* Temporary hack. Apply necessary fixed height to parent .ie11-hotfix */
+    height: inherit;
+  }
+}
+
 .ScrollView--horizontal {
 
   &,
